# Labels4Rails

./: README.md  linux_environment.yml  setup.cfg  win_environment.yml
src/: __main__.py
src/conf/: config.yaml
src/labels4rails/annotate/: __init__.py  annotator.py  qt_annotator.py
src/labels4rails/autolabel/: switches.py  tracks.py
src/labels4rails/convert/: config_convert2pixelmask.yaml  raillabel2YOLO.py  raillabel2pixelmask.py  yolo_to_rail_label.py
src/labels4rails/data/: __init__.py  camera_config.py  data_set.py
src/labels4rails/gui/: __init__.py  events.py
src/labels4rails/gui/aiming_devices/: __init__.py
src/labels4rails/gui/mouse/: __init__.py  mouse.py
src/labels4rails/gui/qt/: gui.py  gui_init.py  image_viewer.py
src/labels4rails/label_conversion/: TagFilter.py  __init__.py  label_converter.py  label_converter_segmentation.py
src/labels4rails/label_conversion/switch/: __init__.py  switch_label_converter.py
src/labels4rails/label_conversion/tracks/: __init__.py  track_label_converter - Kopie.py  track_label_converter.py
src/labels4rails/scene/: __init__.py  drawer.py  scene.py  serializer.py
src/labels4rails/segmentation/: FilterSettings.ui  SegmentationMainWindow.ui  SelectChunks.ui  filter_gui.py  filter_gui_init.py  gui.py  gui_init.py  json_helpers.py  raillabel2YOLO.py  raillabel2pixelmask.py
src/labels4rails/utils/: __init__.py  config.py  config_segmentation.py
src/labels4rails/utils/camera/: __init__.py  camera.py
src/labels4rails/utils/event/: __init__.py  event.py
src/labels4rails/utils/geometry/: __init__.py  (+7 more)
(+26 files in other folders)
