[metadata]
name = labels4rails
version = 1.0.0
description_file = README.md
long_description = A package that allows to annotate complex scenes on video images from railways.
long_description_content_type = text/markdown
keywords =
    python
    video
    railway
    rail
    train
    labeling

author = HTW Berlin
author_email= <railway-perception@htw-berlin.de>

licence = MIT
licence_file = LICENCE

platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9
    Operating System :: Unix
    Operating System :: Microsoft :: Windows

[options]
package_dir=
    =src
packages=find:
install_requires =
        opencv-python
        pillow
        numpy
        splines
        pyyaml
		hydra-core
		PyQt5
		natsort

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
